fixing hero image on mobile when held in landscape

--- a/stylesheets/blog_stylesheet.css
+++ b/stylesheets/blog_stylesheet.css
@@ -147,7 +147,7 @@ h3{
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 100%;
+  height: 35em;
   position: relative;
 }
 
